@@ -4,15 +4,13 @@ import type { IControl } from "mapbox-gl";
 import { inject, onMounted, onUnmounted, shallowRef } from "vue";
 import { mapvueSymbol } from "../symbols";
 
-interface Props {
+const control = shallowRef<IControl>();
+const props = defineProps<{
   showCompass?: boolean;
   showZoom?: boolean;
   visualizePitch?: boolean;
   position?: "top-right" | "top-left" | "bottom-right" | "bottom-left";
-}
-
-const control = shallowRef<IControl>();
-const props = defineProps<Props>();
+}>();
 const map = inject(mapvueSymbol, undefined);
 
 onMounted(() => {
