@@ -4,14 +4,12 @@ import type { IControl, ScaleControl } from "mapbox-gl";
 import { inject, onMounted, onUnmounted, shallowRef, watch } from "vue";
 import { mapvueSymbol } from "../symbols";
 
-interface Props {
+const control = shallowRef<IControl>();
+const props = defineProps<{
   maxWidth?: number;
   unit?: "imperial" | "metric" | "nautical";
   position?: "top-right" | "top-left" | "bottom-right" | "bottom-left";
-}
-
-const control = shallowRef<IControl>();
-const props = defineProps<Props>();
+}>();
 const map = inject(mapvueSymbol, undefined);
 
 watch(
