@@ -3,7 +3,9 @@ import { inject, onMounted, onUnmounted, shallowRef, watch } from "vue";
 import { mapvueSymbol } from "../symbols";
 import type { AnySourceImpl, RasterSource } from "mapbox-gl";
 
-interface Props {
+const source = shallowRef<AnySourceImpl>();
+const map = inject(mapvueSymbol, undefined);
+const props = defineProps<{
   id: string;
   url?: string;
   tiles?: string[];
@@ -14,11 +16,7 @@ interface Props {
   minzoom?: number;
   maxzoom?: number;
   // volatile?: boolean;
-}
-
-const source = shallowRef<AnySourceImpl>();
-const map = inject(mapvueSymbol, undefined);
-const props = defineProps<Props>();
+}>();
 
 const triggerRepaint = () => {
   if (!map) return;
