@@ -1,3 +1,7 @@
+### 2024-04-23
+1. Update props
+2. Update package.json
+
 ### 2022-12-22
 1. Deperate mapbox-gl
 2. Remove style.css
